<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package that interfaces with an Arduino Board via i2C</description>
  <maintainer email="gabrielnalinb@gmail.com">bettanin</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>encoder_interface</exec_depend>
  <exec_depend>imu_interface</exec_depend>
  <exec_depend>gps_interface</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>my_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
